Revert "2789 - table column visibilty ui fix for checkbox"
This reverts commit ed9bca40b6d14a5c958930a484b017aa9e217c8f.

--- a/stencil-workspace/src/components/modus-table/parts/panel/modus-table-columns-visibility/modus-table-columns-visibility.scss
+++ b/stencil-workspace/src/components/modus-table/parts/panel/modus-table-columns-visibility/modus-table-columns-visibility.scss
@@ -18,9 +18,6 @@
   }
 
   .column-visibility-item {
-    align-items: center;
-    display: flex;
-    justify-content: left;
     padding: 5px 5px 5px 12px;
 
     &:focus,
